
30/01/2026:
	- Make sure PHOTOMETRIC_MINISWHITE interpretation is treated as greyscale in TPTImage
	- Constrain output buffer indices when converting from 1 to 8 bit
	- Handle 2, 4, 6, 10, 12 and 14 bit depth TIFFs


31/12/2025:
	- Re-write of View::getResolution() to more robustly determine resolution level: handles images with levels
	  either rounded up or down.
	- Update to IIIF.cc to more cleanly determine whether a request is for a tile or not and more accruately
	  calculate normalized region sizes.


28/12/2025:
	- Eliminate warnings from GCC when using maximal compiler warning levels


22/12/2025:
	- Update OpenJPEG and Kakadu decoders to store real resolution sizes rather than try to mimic TIFF.
	  View::getResolution() also updated to take a vector of existing resolution sizes to determine resolution
	  rather than trying to estimate these sizes. Fixes https://github.com/ruven/iipsrv/issues/283


13/06/2025:
	- Change TIFF SubIFD offset size to uint64_t in TPTImage.h. Fixes https://github.com/ruven/iipsrv/issues/281


11/06/2025:
	- Improve OpenMP detection in configure


10/06/2025:
	- Update src/Makefile.am to use universal "install -d" rather than "install -D"


04/06/2025:
	- Fix typo in configure.ac


28/05/2025: Version 1.3 Released


22/05/2025:
	- Fix to incorrect resolution calculation in View.cc
	- Correct typos in comments in JPEGImage.h


19/05/2025:
	- Make sure ICC profile buffer is freed in JPEGImage.cc.
	- Updated make install command to correctly create all leading directories.


17/05/2025:
	- Added check for unsupported HTTP methods in Main.cc and added convenience function in IIPResponse class
	  to generate appropriate HTTP headers for 405, 304 and 204 status codes


12/05/2025:
	- Minor updates to avoid SonarQube warnings


10/05/2025:
	- Updated IIP metadata object to return real iipsrv version


30/04/2025:
	- Added default initialization of cielab values in Transform::LAB2sRGB() function


28/04/2025: